2009-09-28  Andreas Kupries  <andreask@activestate.com>

	* snit.man: Commit a long-standing fix to the last entry.
	* snit.tcl: Wrap the close commands into catch to handle
	* snit2.tcl: the possibility of the std channels not
	* pkgIndex.tcl: existing. Bumped versions to 1.3.4 and
	* main1_83.tcl 2.2.4.
	* main1.tcl:
	* main2.tcl:

2009-06-22  Andreas Kupries  <andreask@activestate.com>

	* main1.tcl: Fix handling of hierarchical typemethods for missing
	* main1_83.tcl: subcommands. If a toplevel hmethod is not found
	* main2.tcl: we can assume it to be an instance name and do an
	* pkgIndex.tcl: implicit 'create' of it. If the toplevel hmethod
	* snit.tcl: has already been accepted however a missing submethod
	* snit2.tcl: has to error out, an implicit create is not possible
	* snit.test: any longer. Extended the testsuite to cover this
	  case. Bumped the package versions to 2.2.3, and 1.3.3.

2009-04-21  Andreas Kupries  <andreask@activestate.com>

	* main1.tcl (::snit::Comp.Init): Close unused standard channels
	* main1_83.tcl (::snit::Comp.Init): to prevent the internal compile
	* main2.tcl (::snit::Comp.Init): interp from blocking a close/open
	* snit.tcl: dance to replace them in the main interp. Bumped the
	* snit2.tcl: packages to versions 1.3.2 and 2.2.2 respectively.
	* pkgIndex.tcl:

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-08-20  Will Duquette  <will@wjduquette.com>

	* snitfaq.man: Finished up [SF Tcllib Bug 1658089].
	
2008-05-16  Andreas Kupries  <andreask@activestate.com>

	* snitfaq.man: Fixed the sectref argument order issues.

2008-05-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* snitfaq.man: Updated to changes in doctools (sub)section
	  reference handling.
