@@ -69,6 +69,14 @@ tcltest::testConstraint snit2 [expr {$snitVersion == 2}]
 tcltest::testConstraint tcl83 [string equal [info tclversion] "8.3"]
 tcltest::testConstraint tcl84 [package vsatisfies [package present Tcl] 8.4]
 
+if {[package vsatisfies [package provide Tcl] 8.6]} {
+    # 8.6+
+    proc expect {six default} { return $six }
+} else {
+    # 8.4/8.5
+    proc expect {six default} { return $default }
+}
+
 #---------------------------------------------------------------------
 # Load the snit package.
 
@@ -577,7 +585,9 @@ test htypemethod-1.6 {proper error on missing submethod} -constraints {
     error
 } -cleanup {
     dog destroy
-} -result {wrong # args: should be "dog wag subcommand ?argument ...?"}
+} -result [expect \
+	       {wrong # args: should be "dog wag subcommand ?arg ...?"} \
+	       {wrong # args: should be "dog wag subcommand ?argument ...?"}]
 
 # Case 1
 test htypemethod-1.7 {proper error on bogus submethod} -constraints {
@@ -1237,7 +1247,9 @@ test creation-1.10 {If -hasinstances no, [$type] != [$type create %AUTO%]} -cons
     dog destroy
 } -returnCodes {
     error
-} -result {wrong # args: should be "dog subcommand ?argument ...?"}
+} -result [expect \
+	       {wrong # args: should be "dog subcommand ?arg ...?"} \
+	       {wrong # args: should be "dog subcommand ?argument ...?"}]
 
 # Case 1
 test creation-1.11 {If widget, [$type] != [$type create %AUTO%]} -constraints {
@@ -1267,7 +1279,9 @@ test creation-1.12 {If widget, [$type] != [$type create %AUTO%]} -constraints {
     dog destroy
 } -returnCodes {
     error
-} -result {wrong # args: should be "dog subcommand ?argument ...?"}
+} -result [expect \
+	       {wrong # args: should be "dog subcommand ?arg ...?"} \
+	       {wrong # args: should be "dog subcommand ?argument ...?"}]
 
 test creation-1.13 {If -hastypemethods yes, [$type] == [$type create %AUTO%]} -constraints {
     snit1
@@ -1293,7 +1307,9 @@ test creation-1.14 {If -hastypemethods yes, [$type] != [$type create %AUTO%]} -c
     dog destroy
 } -returnCodes {
     error
-} -result {wrong # args: should be "dog subcommand ?argument ...?"}
+} -result [expect \
+	       {wrong # args: should be "dog subcommand ?arg ...?"} \
+	       {wrong # args: should be "dog subcommand ?argument ...?"}]
 
 test creation-2.1 {Can't call "destroy" in constructor} -body {
     type dog {
@@ -1649,7 +1665,9 @@ test hmethod-1.6 {proper error on missing submethod} -constraints {
     dog destroy
 } -returnCodes {
     error
-} -result {wrong # args: should be "spot wag subcommand ?argument ...?"}
+} -result [expect \
+	       {wrong # args: should be "spot wag subcommand ?arg ...?"} \
+	       {wrong # args: should be "spot wag subcommand ?argument ...?"}]
 
 test hmethod-1.7 {submethods called in proper objects} -body {
     # NOTE: This test was added in response to a bug report by
@@ -5109,7 +5127,9 @@ test iinfo-1.2 {object info too few args} -constraints {
     error
 } -cleanup {
     dog destroy
-} -result {wrong # args: should be "spot info command ..."}
+} -result [expect \
+	       {wrong # args: should be "spot info command ?arg ...?"} \
+	       {wrong # args: should be "spot info command ..."}]
 
 test iinfo-1.3 {object info too many args} -body {
     type dog { }
@@ -5699,7 +5719,9 @@ test tinfo-1.2 {type info too few args} -constraints {
     error
 } -cleanup {
     dog destroy
-} -result {wrong # args: should be "dog info command ..."}
+} -result [expect \
+	       {wrong # args: should be "dog info command ?arg ...?"} \
+	       {wrong # args: should be "dog info command ..."}]
 
 test tinfo-1.3 {type info too many args} -body {
     type dog { }
@@ -9113,4 +9135,5 @@ test bug-3.1 {Bug 1532791: snit2, snit::widget problem} -constraints {
 #---------------------------------------------------------------------
 # Clean up
 
+rename expect {}
 testsuiteCleanup
